# Skeletal

./: .gitmodules  CMakeLists.txt  README.md
SimpleGltf/: simplegltf.h
SimpleGltfTests/: CMakeLists.txt  glbtests.cpp
Skeletal/: CMakeLists.txt  addon.cpp  addon.h  addon_helper.h  addon_left.h  addon_popup.h  eglapp.cpp  guistate.cpp  guistate.h  main.cpp  save_windowplacement.h  win32_window.cpp
common/: CMakeLists.txt  shadersourcemanager.cpp  shadersourcemanager.h  win32_window.cpp  win32_window.h
core/: camera_state.h
dx11/: CMakeLists.txt  dx11.h  material.cpp  material.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h  shadersourcemanager.cpp  shadersourcemanager.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbuffer_impl.cpp  vertexbuffer_impl.h
gles3renderer/: CMakeLists.txt  gles3material.cpp  gles3material.h  gles3renderer.cpp  gles3renderer.h  gles3shader.cpp  gles3shader.h  gles3texture.cpp  gles3texture.h  gles3vertexbuffer.cpp  gles3vertexbuffer.h  shadersourcemanager.cpp  shadersourcemanager.h
gles3renderer.bak/: gles3material.cpp  gles3material.h  gles3renderer.cpp  gles3shader.cpp  gles3shader.h  gles3texture.cpp  gles3texture.h  gles3vertexbuffer.cpp
gui/: CMakeLists.txt  Interop.h  gui.cpp  gui.h  guistate.cpp  guistate.h  im3d_gui.cpp  imgui_node_graph_test.h  imnode_sample.cpp  imnode_sample.h  orbit_camera.h
scene/: CMakeLists.txt  camera.h  dxm.cpp  dxm.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  mouse.cpp  mouse.h  node.cpp  node.h  node_animation.cpp  node_animation.h  objectbase.h  scene.cpp  scene.h  shadertype.h  texture.cpp  texture.h
shaders/: gizmo.fs  gizmo.vs  im3d_lines.fs  im3d_lines.vs  im3d_points.fs  im3d_points.vs  im3d_triangles.fs  im3d_triangles.vs  unlit.fs  unlit.hlsl  unlit.vs
view/: CMakeLists.txt  dx11_view.cpp  dx11_view.h
